[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
cloudscraper = "^1.2.60"
slugify = "^0.0.1"
Flask = "^2.1.2"
telegram = "^0.0.1"
validators = "^0.19.0"
requests = "^2.27.1"
pyshorteners = "^1.0.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"